fix: overflow in code blocks

--- a/themes/tien/assets/css/main.css
+++ b/themes/tien/assets/css/main.css
@@ -5,3 +5,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+pre {
+  overflow-x: auto
+}
